--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discleanse",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "private": true,
   "devDependencies": {
